Update DEPLOYMENT.md